--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivative = "
+    "    derivative = [find_term_deri]"
    ]
   },
   {
