Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,12 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivative = [find_term_derivative(term) for term in function_ter]"
+    "    derivative = [find_term_derivative(term) for term in function_terms]\n",
+    "    return "
    ]
   },
   {
