--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    find_derivative(term)"
+    "    return output_at(find_derivative(terms)"
    ]
   },
   {
