--- a/index.ipynb
+++ b/index.ipynb
@@ -259,22 +259,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(6, 1), (0, -1)]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "12.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print (find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
+    "print (find_derivative(three_x_squared_minus_eleven)) # [(6, 1)]\n",
     "derivative_at(three_x_squared_minus_eleven, 2) # 12"
    ]
   },
