--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative_function_values = list(map(lambda x: output_at(find_derivative(terms),x_values)))"
+    "    derivative_function_values = list(map(lambda x: output_at(find_derivative(terms),x,x_values)))"
    ]
   },
   {
