Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivative_function_values = list(map(lambda x: output_at(find_derivative(terms),x),x_values))\n",
-    "    return trace"
+    "    return trace_values(x_va)"
    ]
   },
   {
