--- a/index.ipynb
+++ b/index.ipynb
@@ -148,18 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative = [find_term_derivative(term) for term in function_terms]\n",
-    "    return list(filter(lambda x: x[0] != 0, ))"
+    "    return list(filter(lambda x: x[0] != 0, derivative))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "[(12, 2), (-3, 0)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1), (0, -1)]"
+       "[(6, 1)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
