Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,27 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative = [find_term_derivative(term) for term in function_terms]\n",
-    "    return list(filter(lambda x: x[0] != 0, derivative))"
+    "    return filter(lambda x: x[0] != 0, derivative)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0)]"
+       "<filter at 0x7ff70d744f28>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
