--- a/index.ipynb
+++ b/index.ipynb
@@ -482,6 +482,7 @@
    ],
    "source": [
     "from calculus import function_values_trace\n",
+    "from calculus import trace_val\n",
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "function_values_trace(three_x_squared_minus_eleven, list(range(-5, 5)))"
    ]
